# car_noises

./: .gitignore  docker-compose.yml
backend/: .gitignore  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
backend/api/: api_urls.py  utils.py
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  dev.py  production.py
backend/ratings/: admin.py  models.py
backend/ratings/api/: serializers.py  views.py
backend/ratings/migrations/: 0001_initial.py  0002_auto_20210204_1557.py
backend/ratings/templates/ratings/: ratings_changelist.html
backend/sounds/api/: views.py
backend/subjects/: models.py
backend/subjects/api/: serializers.py  views.py
backend/subjects/management/commands/: initadmin.py
backend/subjects/migrations/: 0001_initial.py
docker/nginx/: nginx.conf
docker/node/: Dockerfile
docker/web/: Dockerfile
frontend/: craco.config.js  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.js
frontend/src/components/: Button.js  Loading.js  RatingScale.js  RegisterForm.js
frontend/src/pages/: End.js  Instruction.js  Rating.js  Register.js  Sound.js
frontend/src/stores/: experiment.js  sounds.js
frontend/src/utils/: api.js  howler.js
